--- a/assets/sass/_vars.sass
+++ b/assets/sass/_vars.sass
@@ -1,3 +1,10 @@
+$cyan: #8be9fd
+$green: #50fa7b
+$orange: #ffb86c
+$pink: #ff79c6
+$purple: #bd93f9
+$red: #ff5555
+$yellow: #f1fa8c
 $white: #f8f8f2
 $black: #111
 $dark-grey: #282a36
