chaging front link stuff

--- a/assets/sass/_elements.sass
+++ b/assets/sass/_elements.sass
@@ -8,6 +8,11 @@
     margin-bottom: 2rem
     line-height: 1.5em
 
+.front-link
+    font-family: $font
+    margin-bottom: 1rem 
+    line-height: 1em 
+
 #title
     margin-top: 3rem
     font-family: $font
