--- a/assets/sass/_vars.sass
+++ b/assets/sass/_vars.sass
@@ -8,7 +8,7 @@ $yellow: #f1fa8c
 $white: #f8f8f2
 $black: #111
 $dark-grey: #282a36
-$font: monospace, 'sans serif'
+$font: mono, monospace, sans serif
 $body-size: 14px
 $body-text: $white
 
